--- a/src/app/auth/components/sign-in/sign-in.component.html
+++ b/src/app/auth/components/sign-in/sign-in.component.html
@@ -5,17 +5,7 @@
   <h1 class="text-sm font-semibold mb-6 text-gray-500 text-center">
     Es un gusto tenerte en nuestra red social.
   </h1>
-  <div class="mt-4 flex flex-col lg:flex-row items-center justify-center">
-    <asl-google-signin-button
-      type="standard"
-      size="large"
-      shape="circle"
-      [width]="250"
-    />
-  </div>
-  <div class="mt-4 text-sm text-gray-600 text-center">
-    <p>o con tu correo</p>
-  </div>
+
   <form [formGroup]="form" class="space-y-4">
     <!-- Your form elements go here -->
 
@@ -25,11 +15,14 @@
       >
       <input
         type="text"
-        name="email"
-        formGroupName="email"
+        formControlName="email"
         placeholder="you@example.com"
         class="mt-1 p-2 w-full border rounded-md focus:border-gray-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-300 transition-colors duration-300"
       />
+
+      @if (invalidField('email')) {
+      <span class="text-sm text-red-500">{{ getError("email") }}</span>
+      }
     </div>
     <div>
       <label for="password" class="block text-sm font-medium text-gray-700"
@@ -39,15 +32,19 @@
         type="password"
         placeholder="*********"
         name="password"
-        formGroupName="password"
+        formControlName="password"
         class="mt-1 p-2 w-full border rounded-md focus:border-gray-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-300 transition-colors duration-300"
       />
+      @if (invalidField('password')) {
+      <span class="text-sm text-red-500">{{ getError("password") }}</span>
+
+      }
     </div>
     <div>
       <button
         type="submit"
         class="w-full bg-black text-white p-2 rounded-md hover:bg-gray-800 focus:bg-black focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-900 transition-colors duration-300"
-        (click)="validateLogin()"
+        (click)="login()"
       >
         Ingresar
       </button>
