--- a/src/app/social/components/user-profile/user-profile.component.html
+++ b/src/app/social/components/user-profile/user-profile.component.html
@@ -7,7 +7,7 @@
       class="w-full rounded-t-lg"
     />
     <img
-      src="https://i.pravatar.cc/150?img={{ user()?.id }}"
+      src="https://i.pravatar.cc/150?img=2"
       alt="Profile Picture"
       class="absolute bottom-0 left-2/4 transform -translate-x-1/2 translate-y-1/2 w-24 h-24 rounded-full border-4 border-white"
     />
@@ -24,7 +24,7 @@
     </p>
     <p class="text-gray-700 text-center">
       <b>Edad</b><br />
-      {{ getAge(user()!.birthdate) }}
+      {{ getAge(user()!.birthDate) }}
     </p>
 
     <div class="flex items-center justify-around mt-4">
@@ -36,6 +36,7 @@
       </button>
       <button
         class="bg-blue-500 hover:bg-blue-600 focus:outline-none focus:shadow-outline-blue text-white py-2 px-4 rounded-md transition duration-300 gap-2"
+        (click)="logOut()"
       >
         cerrar sesión
       </button>
