--- a/src/app/auth/components/sign-up/sign-up.component.html
+++ b/src/app/auth/components/sign-up/sign-up.component.html
@@ -13,6 +13,7 @@
         >Nombres Completos</label
       >
       <input
+        id="username"
         type="text"
         formControlName="fullName"
         placeholder="John Smith Doe "
@@ -29,6 +30,7 @@
       >
       <input
         type="text"
+        id="email"
         formControlName="email"
         placeholder="you@example.com"
         class="mt-1 p-2 w-full border rounded-md focus:border-gray-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-300 transition-colors duration-300"
@@ -43,6 +45,7 @@
         >Password</label
       >
       <input
+        id="password"
         type="password"
         formControlName="password"
         placeholder="*********"
@@ -54,10 +57,11 @@
       }
     </div>
     <div>
-      <label for="email" class="block text-sm font-medium text-gray-700"
+      <label for="birthDate" class="block text-sm font-medium text-gray-700"
         >Fecha de nacimiento</label
       >
       <input
+        id="birthDate"
         type="date"
         formControlName="birthDate"
         class="mt-1 p-2 w-full border rounded-md focus:border-gray-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-300 transition-colors duration-300"
@@ -66,7 +70,11 @@
       <span class="text-sm text-red-500">{{ getError("birthDate") }}</span>
       }
     </div>
-
+    @if (loading) {
+    <div class="flex w-full justify-center">
+      <app-spinner />
+    </div>
+    }
     <div>
       <button
         type="submit"
