--- a/src/app/social/components/update-post-modal/update-post-modal.component.html
+++ b/src/app/social/components/update-post-modal/update-post-modal.component.html
@@ -5,22 +5,24 @@
     class="max-h-full w-full max-w-xl overflow-y-auto sm:rounded-2xl bg-white"
   >
     <div class="w-full">
-      <div class="m-5 my-10 max-w-[400px] mx-auto">
-        <h1 class="mb-4 text-3xl font-extrabold">Edita tu publicación</h1>
+      <form [formGroup]="form" class="m-5 my-10 max-w-[400px] mx-auto">
+        <h1 class="text-3xl font-extrabold">Edita tu publicación</h1>
+        <p class="text-sm font-semibold mb-4 text-gray-500">
+          Haz click en los campos que deseas editar
+        </p>
         <!-- User Info with Three-Dot Menu -->
         <div class="flex items-center justify-between mb-4">
           <div class="flex items-center space-x-2">
             <img
-              src="https://i.pravatar.cc/150?img={{ post()?.id }}"
+              src="https://i.pravatar.cc/150?img={{
+                post()?.userId?.idImageRandom
+              }}"
               alt="User Avatar"
               class="w-8 h-8 rounded-full"
             />
             <div>
               <p class="text-gray-800 font-semibold">
-                {{ post()?.nombre_user }}
-              </p>
-              <p class="text-gray-500 text-sm">
-                Publicado el {{ post()?.fecha_publicacion }}
+                {{ post()?.userId?.fullName }}
               </p>
             </div>
           </div>
@@ -28,29 +30,41 @@
         <!-- Message -->
         <div class="mb-4">
           <input
-            class="font-bold text-gray-800 mb-3 w-full"
+            formControlName="title"
+            class="font-bold text-gray-800 w-full"
             type="text"
-            [value]="post()?.titulo"
           />
+          @if (invalidField('title')) {
+          <span class="text-sm text-red-500">{{ getError("title") }}</span>
+          }
 
           <textarea
+            formControlName="content"
             id="postContent"
             name="postContent"
             rows="4"
-            class="w-full border-2 rounded-md px-4 py-2 leading-5 transition duration-150 ease-in-out sm:text-sm sm:leading-5 resize-none focus:outline-none focus:border-blue-500"
-            >{{ post()?.descripcion }}</textarea
-          >
+            class="mt-3 w-full border-2 rounded-md px-4 py-2 leading-5 transition duration-150 ease-in-out sm:text-sm sm:leading-5 resize-none focus:outline-none focus:border-blue-500"
+          ></textarea>
+          @if (invalidField('content')) {
+          <span class="text-sm text-red-500">{{ getError("content") }}</span>
+          }
         </div>
 
-        <div class="flex items-center justify-around mt-4">
+        <div class="flex flex-col lg:flex-row lg:justify-center lg:space-x-4">
           <button
-            (click)="closeModal()"
-            class="p-3 bg-black rounded-full text-white w-full font-semibold"
+            (click)="updateUser()"
+            class="p-3 bg-black rounded-full text-white w-full lg:w-50 mb-2 lg:mb-0"
           >
             Actualizar
           </button>
+          <button
+            (click)="closeModal()"
+            class="p-3 bg-red-600 rounded-full text-white w-full lg:w-50"
+          >
+            Cerrar
+          </button>
         </div>
-      </div>
+      </form>
     </div>
   </div>
 </div>
