--- a/src/app/social/components/update-user-modal/update-user-modal.component.html
+++ b/src/app/social/components/update-user-modal/update-user-modal.component.html
@@ -5,10 +5,15 @@
     class="max-h-full w-full max-w-xl overflow-y-auto sm:rounded-2xl bg-white"
   >
     <div class="w-full">
-      <div class="m-5 my-10 max-w-[400px] mx-auto">
-        <div class="mb-8">
-          <h1 class="mb-4 text-3xl font-extrabold">Edita tu perfil</h1>
-          <div class="bg-white p-8 rounded-lg shadow-md max-w-md w-full mb-4">
+      <div class="m-5 my-5 max-w-[400px] mx-auto">
+        <div class="mb-2">
+          <div
+            class="bg-white p-8 py-4 rounded-lg shadow-md max-w-md w-full mb-4"
+          >
+            <h1 class="text-3xl font-extrabold">Edita tu perfil</h1>
+            <p class="text-sm font-semibold mb-4 text-gray-500">
+              Haz click en los campos que deseas editar
+            </p>
             <!-- Banner Profile -->
             <div class="relative">
               <img
@@ -17,47 +22,79 @@
                 class="w-full rounded-t-lg"
               />
               <img
-                src="https://i.pravatar.cc/150?img={{ 2 }}"
+                src="https://i.pravatar.cc/150?img={{ user()?.idImageRandom }}"
                 alt="Profile Picture"
                 class="absolute bottom-0 left-2/4 transform -translate-x-1/2 translate-y-1/2 w-24 h-24 rounded-full border-4 border-white"
               />
             </div>
-            <!-- User Info with Verified Button -->
-            <div class="flex items-center flex-col mt-12">
+
+            <!-- User Info  -->
+            <form [formGroup]="form" class="flex items-center flex-col mt-12">
               <input
                 type="text"
-                [value]="user()?.fullName"
+                formControlName="fullName"
                 class="text-xl font-bold text-gray-800 text-center"
               />
+              @if (invalidField('fullName')) {
+              <span class="text-sm text-red-500">{{
+                getError("fullName")
+              }}</span>
+              }
+
               <input
                 class="text-sm font-semibold mb-1 text-gray-500 text-center"
                 type="email"
-                [value]="user()?.email"
+                formControlName="email"
               />
+              @if (invalidField('email')) {
+              <span class="text-sm text-red-500">{{ getError("email") }}</span>
+              }
 
-              <p class="text-gray-700 text-center mb-1">
-                <b>Creado el</b> <br />
-                {{ user()?.createdAt | date : "medium" }}
-              </p>
+              <label class="font-bold text-gray-800 text-center" for="password"
+                >Contraseña</label
+              >
+
+              <input
+                id="password"
+                class="text-sm font-semibold mb-1 text-gray-500 text-center"
+                type="password"
+                formControlName="password"
+                placeholder="*********"
+              />
+              @if (invalidField('password')) {
+              <span class="text-sm text-red-500">{{
+                getError("password")
+              }}</span>
+              }
+
               <p class="text-gray-700 text-center">
                 <b>Fecha nacimiento</b><br />
               </p>
-              <input
-                type="date"
-                [value]="user()?.birthDate"
-                (input)="imprimir($event)"
-              />
-            </div>
-            <!-- Bio -->
+              <input type="date" formControlName="birthDate" />
+              @if (invalidField('birthDate')) {
+              <span class="text-sm text-red-500">{{
+                getError("birthDate")
+              }}</span>
+              }
+            </form>
           </div>
-        </div>
-        <div class="space-y-4">
-          <button
-            (click)="closeModal()"
-            class="p-3 bg-black rounded-full text-white w-full font-semibold"
-          >
-            Actualizar
-          </button>
+
+          <br />
+
+          <div class="flex flex-col lg:flex-row lg:justify-center lg:space-x-4">
+            <button
+              (click)="updateUser()"
+              class="p-3 bg-black rounded-full text-white w-full lg:w-50 mb-2 lg:mb-0"
+            >
+              Actualizar
+            </button>
+            <button
+              (click)="closeModal()"
+              class="p-3 bg-red-600 rounded-full text-white w-full lg:w-50"
+            >
+              Cerrar
+            </button>
+          </div>
         </div>
       </div>
     </div>
