--- a/src/app/social/components/user-profile/user-profile.component.html
+++ b/src/app/social/components/user-profile/user-profile.component.html
@@ -7,14 +7,16 @@
       class="w-full rounded-t-lg"
     />
     <img
-      src="https://i.pravatar.cc/150?img=2"
+      src="https://i.pravatar.cc/150?img={{ user()?.idImageRandom }}"
       alt="Profile Picture"
       class="absolute bottom-0 left-2/4 transform -translate-x-1/2 translate-y-1/2 w-24 h-24 rounded-full border-4 border-white"
     />
   </div>
   <!-- User Info with Verified Button -->
   <div class="flex items-center flex-col mt-12">
-    <h2 class="text-xl font-bold text-gray-800">{{ user()?.fullName }}</h2>
+    <h2 class="text-xl font-bold text-gray-800">
+      {{ user()?.fullName | titlecase }}
+    </h2>
     <h3 class="text-sm font-semibold mb-1 text-gray-500 text-center">
       {{ user()?.email }}
     </h3>
